@@ -1,3 +1,4 @@
+Fixed: Reset all is broken
 Made trace disappear after 2 earth years
 Removed the phet logo to save vertical space on the control panel
 Fixed: In real modes, velocities should not be draggable
